# monica_api

./: .gitignore  pyproject.toml
monica/: config.py
monica/chat/: bot.py  model.py  monica_bot.py
